kubernetes/management/ddns-updater/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: ddns-updater
  name: ddns-updater-basic-auth
spec:
  basicAuth:
    secret: ddns-updater-auth-secrets
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: ddns-updater
  name: ddns-updater-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`ddns.kalexlab.xyz`)
      services:
        - name: ddns-updater
          port: 8000
      middlewares:
        - name: ddns-updater-basic-auth
  tls:
    secretName: ddns-updater-ingress-certificate-secret
